--- a/new-site/events/mytinyatlaslondon/index.html
+++ b/new-site/events/mytinyatlaslondon/index.html
@@ -113,7 +113,7 @@
 
     <div id="print-grid" class="grid-wrapper">
         <div class="gram">
-            <a href="http://instagram.com/_jessum_" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/print/_jessum_.jpg" alt="photography by _jessum_">
+            <a href="http://instagram.com/_jessum_" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/print/jessum_.jpg" alt="photography by _jessum_">
                 <p>_jessum_</p>
             </a>
         </div>
@@ -128,8 +128,28 @@
             </a>
         </div>
         <div class="gram">
+            <a href="http://instagram.com/angrybaker" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/print/angrybaker.jpg" alt="photography by angrybaker">
+                <p>angrybaker</p>
+            </a>
+        </div>
+        <div class="gram">
+            <a href="http://instagram.com/angrybaker" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/angrybaker-1.jpg" alt="photography by angrybaker">
+                <p>angrybaker</p>
+            </a>
+        </div>
+        <div class="gram">
+            <a href="http://instagram.com/angrybaker" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/angrybaker-4.jpg" alt="photography by angrybaker">
+                <p>angrybaker</p>
+            </a>
+        </div>
+        <div class="gram">
             <a href="http://instagram.com/brittfabello" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/print/brittfabello.jpg" alt="photography by brittfabello">
                 <p>brittfabello</p>
+            </a>
+        </div>
+        <div class="gram">
+            <a href="http://instagram.com/blythmonster" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/print/blythmonster.jpg" alt="photography by blythmonster">
+                <p>blythmonster</p>
             </a>
         </div>
         <div class="gram">
@@ -203,16 +223,6 @@
             </a>
         </div>
         <div class="gram">
-            <a href="http://instagram.com/angrybaker" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/print/angrybaker.jpg" alt="photography by angrybaker">
-                <p>angrybaker</p>
-            </a>
-        </div>
-        <div class="gram">
-            <a href="http://instagram.com/blythmonster" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/print/blythmonster.jpg" alt="photography by blythmonster">
-                <p>blythmonster</p>
-            </a>
-        </div>
-        <div class="gram">
             <a href="http://instagram.com/francesmehardie" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/print/francesmehardie-1.jpg" alt="photography by francesmehardie">
                 <p>francesmehardie</p>
             </a>
@@ -273,7 +283,7 @@
             </a>
         </div>
         <div class="gram">
-            <a href="http://instagram.com/__suzannah" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/print/__suzannah.jpg" alt="photography by __suzannah">
+            <a href="http://instagram.com/__suzannah" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/print/suzannah.jpg" alt="photography by __suzannah">
                 <p>__suzannah</p>
             </a>
         </div>
@@ -370,22 +380,12 @@
             </a>
         </div>
         <div class="gram">
-            <a href="http://instagram.com/angrybaker" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/angrybaker-1.jpg" alt="photography by angrybaker">
-                <p>angrybaker</p>
-            </a>
-        </div>
-        <div class="gram">
             <a href="http://instagram.com/angrybaker" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/angrybaker-2.jpg" alt="photography by angrybaker">
                 <p>angrybaker</p>
             </a>
         </div>
         <div class="gram">
             <a href="http://instagram.com/angrybaker" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/angrybaker-3.jpg" alt="photography by angrybaker">
-                <p>angrybaker</p>
-            </a>
-        </div>
-        <div class="gram">
-            <a href="http://instagram.com/angrybaker" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/angrybaker-4.jpg" alt="photography by angrybaker">
                 <p>angrybaker</p>
             </a>
         </div>
@@ -540,7 +540,7 @@
             </a>
         </div>
         <div class="gram">
-            <a href="http://instagram.com/_jessum_" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/_jessum_.jpg" alt="photography by _jessum_">
+            <a href="http://instagram.com/_jessum_" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/jessum_.jpg" alt="photography by _jessum_">
                 <p>_jessum_</p>
             </a>
         </div>
@@ -603,12 +603,7 @@
             <a href="http://instagram.com/theprettysecrets" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/theprettysecrets.jpg" alt="photography by theprettysecrets">
                 <p>theprettysecrets</p>
             </a>
-        </div>
-        <div class="gram">
-            <a href="http://instagram.com/blythmonster" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/blythmonster.jpg" alt="photography by blythmonster">
-                <p>blythmonster</p>
-            </a>
-        </div>
+        </div>>
         <div class="gram">
             <a href="http://instagram.com/giuliadini" target="_blank"><img img="" class="lazy" src="../img/placeholder.jpg" data-original="images/web/giuliadini.jpg" alt="photography by giuliadini">
                 <p>giuliadini</p>
