--- a/new-site/events/mytinyatlaslondon/index.html
+++ b/new-site/events/mytinyatlaslondon/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div id="tahiti" class="img-head" style="height: 650px; background-image: url(images/london-bg-v2.jpg)">
-        <img src="images/london-logo-v2.png" alt="My Tiny Atlas London" class="logo" style="margin-top: 60px; width:300px; max-width: 32%;">
+        <img src="images/london-logo-v2.png" alt="My Tiny Atlas London" class="logo" style="margin-top: 60px;    width: 600px;">
     </div>
 
     <div class="details-card with-logo">
