--- a/new-site/events/mytinyatlaslondon/index.html
+++ b/new-site/events/mytinyatlaslondon/index.html
@@ -105,6 +105,7 @@
                 <a href="https://londonliverpoolstreet.andaz.hyatt.com/en/hotel/home.html" target="_blank">ANdAZ London</a>, and <br />
                 <a href="http://www.dulwichpicturegallery.org.uk" target="_blank">the Dulwich Picture Gallery</a>.
             </p>
+            <p>Three community led photo walks, one real-time picture gallery and over 9,000 submissions to date, this was your #mytinyatlasLondon</p>
 
         </div>
 
