--- a/new-site/index.html
+++ b/new-site/index.html
@@ -120,6 +120,17 @@
 
             <div class="feature-grid">
 
+              <div class="feature-card feature-large">
+                  <a href="dubrovnik/index.html">
+                      <img src="images/dubrovnik-feature.jpg" alt="" class="preview" />
+                      <div class="info">
+                          <img src="dubrovnik-title.pngimages/dubrovnik-title.png" alt="" class="title" />
+                          <p class="text">Picture-perfect and historic, Dubrovnik is both a refuge from reality and an insanely popular tourist destination, but balance is within reach.</p>
+                          <div class="meta">Travel Log<span>8.11.2017</span></div>
+                      </div>
+                  </a>
+              </div>
+
               <div class="feature-card feature-small">
                   <a href="wakiki/index.html">
                       <img src="images/wakiki-feature.jpg" alt="" class="preview" />
@@ -147,7 +158,7 @@
                       <img src="images/macao-feature.jpg" alt="" class="preview" />
                       <div class="info">
                           <img src="images/macao-title.png" alt="" class="title" />
-                          <p class="text">Beneath the manicured facade of resorts and casinos, a much more complex, historically rich Macao awaits</p>
+                          <p class="text">Beneath the manicured facade of resorts and casinos, a much more complex, historically rich Macao awaits.</p>
                           <div class="meta">Travel Log<span>5.02.2017</span></div>
                       </div>
                   </a>
