--- a/new-site/index.html
+++ b/new-site/index.html
@@ -124,7 +124,7 @@
                   <a href="dubrovnik/index.html">
                       <img src="images/dubrovnik-feature.jpg" alt="" class="preview" />
                       <div class="info">
-                          <img src="dubrovnik-title.pngimages/dubrovnik-title.png" alt="" class="title" />
+                          <img src="dubrovnik/images/dubrovnik-title.png" alt="" class="title" />
                           <p class="text">Picture-perfect and historic, Dubrovnik is both a refuge from reality and an insanely popular tourist destination, but balance is within reach.</p>
                           <div class="meta">Travel Log<span>8.11.2017</span></div>
                       </div>
