--- a/new-site/dubrovnik/index.html
+++ b/new-site/dubrovnik/index.html
@@ -151,7 +151,7 @@
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/dubrovnik-title.png" alt="" style="width:410px;"></div>
                         <h3>Photography by: <a href="http://www.erinkunkel.com/" target="_blank">Erin Kunkel</a><br />
-                         Written by: <a href="http://www.bicoastalista.com/" target="_blank">Flora Tsapovsky</a><br />
+                         Written by: <a href="http://www.erinkunkel.com/" target="_blank">Erin Kunkel</a><br />
                          Title Design by: <a href="http://bethabrahamson.com" target="_blank">Beth Abrahamson</a><br />
                     </div>
                 </div>
@@ -190,6 +190,7 @@
                                 <div id="pg-interview">
                                     <h2 class="with-ill-small">Dubrovnik, Croatia</h2>
                                     <p>Dubrovnik, a stunningly beautiful, ancient coastal city, can no doubt feel like a touristy postcard. It’s not its fault - the Adriatic coastline is simply otherworldly, and all the Game of Thrones associations have done their job. The old city in Dubrovnik is small, making it hard to avoid cruise ship tourists and other visitors - but get up go early in the morning or linger at dusk, and you'll have more space to wander. It’s not hard to find quiet places away from people-packed center of Dubrovnik, and other nearby towns like Milni are less frequented by tourists, easily reachable by water taxi. There, small taverns and pristine sites generate some serious magic. </p>
+                                    <p>And if you have a chance, visit, for the sake of comparison, Zagreb as well. That’s where we started, at the highly untouristy university city. We spent time exploring the old city, eating at open air markets, relaxing in cafes and checking out the art scene. It felt everyday, relaxed - and looking back, it made Dubrovnik feel even more euphoric.</p>
                                 </div>
                             </div>
                             <!--END INTERVIEW -->
@@ -680,6 +681,9 @@
 
                         <h5><a href="http://www.stjosephs.hr/" target="_blank">St. Joseph’s</a></h5>
                         <p>This charming boutique destination combines a shabby-chic historic building with contemporary design touches. </p>
+
+                        <h5><a href="http://www.westinzagreb.com/" target="_blank">Westin Zagreb</a></h5>
+                        <p>A big, modern hotel with excellent city views and a central location.</p>
 
                         <h4>Do:</h4>
                         <h5><a href="https://en.wikipedia.org/wiki/Trsteno_Arboretum" target="_blank">Trsteno Arboretum</a></h5>
