--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -159,10 +159,11 @@
                          <a href="mailto:info@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">info@tinyatlasquarterly.com</a>
                        </p>
 
-                      <p>Press Inquries 	&amp; Ad Sales<br/>
-                      <a href="mailto:jill@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">Jill Hudes Lindenbaum</a></p>
+                      <h3>Press Inquries 	&amp; Ad Sales</h3>
+                      <p><a href="mailto:hello@ohanacommunications.com?Subject=Tiny%20Atlas%20Quarterly">Mr. Robbie Woodward or Ms. Flora Bertetti
+                      <br/>at Ohana Communications</a></p>
 
-                      <p><a href="stockists.html">Stockists</a></p> 
+                      <p><a href="stockists.html">Stockists</a></p>
 
                        <p class="italics">Image by: Emily Shur</p>
                        </div>
