--- a/new-site/about/masthead.html
+++ b/new-site/about/masthead.html
@@ -203,7 +203,10 @@
                        <a href="http://www.emilyknathan.com">Emily K Nathan</a><br>
                        <a href="http://www.bicoastalista.com/">Flora Tsapovsky</a></p>
                        <h3>PRESS INQUIRIES &amp; AD SALES</h3>
-                       <p><a href="mailto:jill@tinyatlasquarterly.com">Jill Hudes Lindenbaum</a></p>
+                       <p>Press Inquries 	&amp; Ad Sales<br/>
+                       <a href="mailto:hello@ohanacommunications.com?Subject=Tiny%20Atlas%20Quarterly">Mr. Robbie Woodward or Ms. Flora Bertetti
+                       <br/>at Ohana Communications</a></p>
+
                        </div>
                   </div><!--END INTERVIEW -->
                </div> <!-- END BOX -->
