--- a/new-site/about/masthead.html
+++ b/new-site/about/masthead.html
@@ -203,8 +203,7 @@
                        <a href="http://www.emilyknathan.com">Emily K Nathan</a><br>
                        <a href="http://www.bicoastalista.com/">Flora Tsapovsky</a></p>
                        <h3>PRESS INQUIRIES &amp; AD SALES</h3>
-                       <p>Press Inquries 	&amp; Ad Sales<br/>
-                       <a href="mailto:hello@ohanacommunications.com?Subject=Tiny%20Atlas%20Quarterly">Mr. Robbie Woodward or Ms. Flora Bertetti
+                       <p><a href="mailto:hello@ohanacommunications.com?Subject=Tiny%20Atlas%20Quarterly">Mr. Robbie Woodward or Ms. Flora Bertetti
                        <br/>at Ohana Communications</a></p>
 
                        </div>
