event's - added london

--- a/new-site/events/montauk/index.html
+++ b/new-site/events/montauk/index.html
@@ -764,7 +764,7 @@ $(function() {
 
     <span class="header-links list-triangle"><a href="../index.html">Events</a>
           <ul>
-            <li><a href="../solas/index.html">SOLAS</a></li>
+             <li><a href="../mytinyatlaslondon/index.html">London</a></li> <li><a href="../solas/index.html">SOLAS</a></li>
             <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
             <li><a href="../leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
             <li><a href="index.html" class="link-active">Montauk Show</a></li>
