--- a/new-site/events/leadinghotelsgiveaway/index.html
+++ b/new-site/events/leadinghotelsgiveaway/index.html
@@ -206,7 +206,7 @@ $(function() {
 
     <span class="header-links list-triangle"><a href="../index.html">Events</a>
           <ul>
-            <li><a href="../solas/index.html">SOLAS</a></li>
+             <li><a href="../mytinyatlaslondon/index.html">London</a></li> <li><a href="../solas/index.html">SOLAS</a></li>
             <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
             <li><a href="index.html"  class="link-active">Giveaway: Leading Hotels</a></li>
             <li><a href="../montauk/index.html">Montauk Show</a></li>
