--- a/new-site/events/mytinyatlaslondon/index.html
+++ b/new-site/events/mytinyatlaslondon/index.html
@@ -64,7 +64,7 @@
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
                     <li><a href="index.html" class="link-active">London</a></li>
-                    <li><a href="../solas/index.html">SOLAS</a></li>
+                     <li><a href="../mytinyatlaslondon/index.html">London</a></li> <li><a href="../solas/index.html">SOLAS</a></li>
                     <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
                     <li><a href="../leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
                     <li><a href="../montauk/index.html">Montauk Show</a></li>
