remove give away

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -94,7 +94,6 @@
                     <li><a href="events/mytinyatlaslondon/index.html">London</a></li>
                     <li><a href="events/solas/index.html">SOLAS</a></li>
                     <li><a href="events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
-                    <li><a href="events/leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
                     <li><a href="events/montauk/index.html">Montauk Show</a></li>
                   </ul>
                 </span>
@@ -290,7 +289,7 @@
         get: 'user',
         userId: '381960653',
         limit: '8',
-        resolution: 'low_resolution',
+        resolution: 'thumbnail',
         accessToken: '381960653.1e17c13.4f486b3f47d74b899b7a70705a5730ec',
         template: '<a href="{{link}}"><img src="{{image}}" class="lazy" /></a>'
     });
