remove more giveaway links

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -289,7 +289,7 @@
         get: 'user',
         userId: '381960653',
         limit: '8',
-        resolution: 'thumbnail',
+        resolution: 'low_resolution',
         accessToken: '381960653.1e17c13.4f486b3f47d74b899b7a70705a5730ec',
         template: '<a href="{{link}}"><img src="{{image}}" class="lazy" /></a>'
     });
