--- a/new-site/index.html
+++ b/new-site/index.html
@@ -120,6 +120,17 @@
             <div class="feature-grid">
 
               <div class="feature-card feature-large">
+                  <a href="guadalajara/index.html">
+                      <img src="images/guadalajara-feature.jpg" alt="" class="preview" />
+                      <div class="info">
+                          <img src="guadalajara/images/guadalajara-title.png" alt="" class="title" />
+                          <p class="text">Vibrant streets with hidden culinary gems, artist filled neighborhoods, eclectic galleries and a World Heritage site that will stretch your mind.</p>
+                          <div class="meta">Travel Log<span>11.01.2017</span></div>
+                      </div>
+                  </a>
+              </div>
+
+              <div class="feature-card feature-large">
                   <a href="dubrovnik/index.html">
                       <img src="images/dubrovnik-feature.jpg" alt="" class="preview" />
                       <div class="info">
