add benefit folder and template

--- a/new-site/guadalajara/index.html
+++ b/new-site/guadalajara/index.html
@@ -558,7 +558,7 @@
                                     <h5>Mercado Libertad San Juan de Dios</h5>
                                     <p>One of the most colorful markets in the city, the Mercado draws residents from neighbouring cities. Park yourself next to a local and eavesdrop on a conversation to see if your Spanish is up to snuff, while eating fresh tacos, or  grab them to go, sit on the steps outside and watch the kids play a game of soccer.</p>
 
-                                    <h5><a href="http://www.tequilatourism.com/content/jose-cuervo-fields-experience" target="_blank">Jose Cuervo Tequila Fields</a></h5>
+                                    <h5><a href="https://www.tequilatourism.com/content/jose-cuervo-fields-experience/teqd2f765cba7fdd7b64" target="_blank">Jose Cuervo Tequila Fields</a></h5>
                                     <p>Tour the birthplace of Cuervo tequila with a uniform-clad Jimador (harvest man). Watch Agave pineapples being cooked down and visit the distillery. </p>
 
 
