--- a/new-site/events/sf-benefit-2017/index.html
+++ b/new-site/events/sf-benefit-2017/index.html
@@ -63,7 +63,8 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
-                    <li><a href="index.html" class="link-active">London</a></li>
+                    <li><a href="index.html" class="link-active">SF Photo Show 2017</a></li>
+                     <li><a href="../mytinyatlaslondon/index.html">London</a></li>
                      <li><a href="../solas/index.html">SOLAS</a></li>
                     <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
                     <li><a href="../montauk/index.html">Montauk Show</a></li>
