--- a/new-site/events/climate/index.html
+++ b/new-site/events/climate/index.html
@@ -110,13 +110,13 @@
     <div id="print-grid" class="grid-wrapper">
         <div class="gram">
             <a href="http://instagram.com/_klm____" target="_blank">
-                <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/_klm____.jpg"></div>
+                <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/klm____.jpg"></div>
                 <p>_klm____</p>
             </a>
         </div>
         <div class="gram">
             <a href="http://instagram.com/_nata_" target="_blank">
-                <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/_nata_.jpg"></div>
+                <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/nata_.jpg"></div>
                 <p>_nata_</p>
             </a>
         </div>
