--- a/new-site/events/climate/index.html
+++ b/new-site/events/climate/index.html
@@ -444,6 +444,12 @@
                 <p>twheat</p>
             </a>
         </div>
+        <div class="gram">
+            <a href="http://instagram.com/_nata_" target="_blank">
+                <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/nata_2.jpg"></div>
+                <p>_nata_</p>
+            </a>
+        </div>
     </div>
 
     <h2>Winners Gallery </h2>
