added new photos and text

--- a/new-site/events/climate/index.html
+++ b/new-site/events/climate/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Tiny Atlas Quarterly | London</title>
+    <title>Tiny Atlas Quarterly | Climate</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -83,31 +83,111 @@
                 <span class="label">When</span><br /> Dec 12th - 14th, 2017
             </p>
             <p class="info" style="width:160px">
-                <span class="label">Where</span><br />302 Folsom Street,<br />San Francisco, CA<br /> London - United Kingdom
+                <span class="label">Where</span><br />302 Folsom Street,<br />San Francisco, CA<br />94105
             </p>
         </div>
         <div class="main-content" style="max-width:520px">
-            <p>Climate change has altered our landscapes and poses dangerous threats to our environment. Our Tiny Atlas community has captured photos and stories in showing what #mytinyatlasCLIMATE means to them. Through proceeds from a benefit show and
-                silent auction, TAQ and our partner, <a href="http://theeastcut.org/" target="_blank">The East Cut</a>, are directly assisting non-profit organizations that fight and respond to the effects of climate change. This is #mytinyatlasCLIMATE.</p>
-
-            <p>We would like to give a huge thank you to our sponsors <a href="https://www.outessa.com/" target="_blank">REI’s Outessa</a>, <a href="https://allswellcreative.com/" target="_blank">AllSwell</a>, <a href="https://www.framebridge.com/" target="_blank">Framebridge</a>,
-                <a href="https://www.socialprintstudio.com/" target="_blank">Social Print Studio</a> and <a href="http://alisonevents.com/">Alison Events</a> as well as all of our donor photographers and brands including:
-                <a href="https://www.coyuchi.com/" target="_blank">Coyuchi</a>,
-                <a href="https://shop-generalstore.com/" target="_blank">The General Store</a>,
-                <a href="http://www.standardhotels.com/new-york/properties/high-line" target="_blank">The Standard Highline</a>,
-                <a href="https://www.yondershop.com/" target="_blank">Yonder</a> and many more. Additionally, we are so excited to be donating to the following beneficiaries:
-                <a href="https://afterantarctica.com/" target="_blank">After Antarctica</a>,
-                <a href="http://www.wavesforwater.org/" target="_blank">Waves for Water</a>,
-                <a href="https://www.teoranaho-fape.org/" target="_blank">Te Ora Naho</a>, and
-                <a href="http://www.sonomacf.org/sonoma-county-resilience-fund/" target="_blank">Sonoma County Resilience Fund</a>.</p>
+          <p>Climate change has altered our landscapes and poses dangerous threats to our environment. Our Tiny Atlas community has captured photos and stories to show what #mytinyatlasCLIMATE means to them. Through proceeds from a benefit show and silent auction, TAQ and our partner, <a href="http://theeastcut.org/" target="_blank">The East Cut</a>, are directly assisting non-profit organizations that fight and respond to the effects of climate change. This is #mytinyatlasCLIMATE.</p>
+          <p>We are so excited to be donating all the proceeds from the show to the following beneficiaries: <a href="https://afterantarctica.com/" target="_blank">After Antarctica</a>, <a href="http://www.wavesforwater.org/" target="_blank">Waves for Water</a>, &nbsp;<a href="https://www.teoranaho-fape.org/" target="_blank">Te Ora Naho</a>, and <a href="http://www.sonomacf.org/sonoma-county-resilience-fund/" target="_blank">Sonoma County Resilience Fund</a>.<br />
+          Many thanks are in order.
+          </p>
+          <p><br /></p>
+          <p>To our fantastic panel of judges:</p>
+          <p><a href="https://www.instagram.com/emilyroseblank/">Emily Blank</a>, Photo director of material design at Google</p>
+          <p><a href="https://www.instagram.com/captainlizclark/">Liz Clark</a>, Activist, solo-sailor and surfer</p>
+          <p><a href="https://www.instagram.com/aphotoeditor/">Rob Haggart</a>, Photo editor and creator </p>
+          <p><a href="https://www.instagram.com/cottage8films/">Cory Jacobs</a>, Creative director </p>
+          <p><a href="https://www.instagram.com/the_give_and_take/">Audrey Landreth</a>, Curator</p>
+          <p><a href="https://www.instagram.com/shanelavalette/">Shane Lavalette</a>, Photographer</p>
+          <p><a href="https://www.instagram.com/bam11215/">Brenda Milis</a>, Head of creative services and visual trends at Adobe </p>
+          <p><a href="https://www.instagram.com/charles_post/">Charles Post</a>, Photographer, environmental activist </p>
+          <p><a href="https://www.instagram.com/billshapiro/">Bill Shapiro</a>, Editor-in-Chief, consumer media at Getty Images </p>
+          <p><a href="https://www.instagram.com/adamwerbach/">Adam Werbach</a>, Activist and creator</p>
+          <p><br /></p>
+          <p> To our wonderful Sponsors: </p>
+          <p><a href="https://www.outessa.com/">REI&rsquo;s Outessa</a>, <a href="https://allswellcreative.com/">AllSwell</a>, <a href="https://www.framebridge.com/">Framebridge</a>, <a href="https://www.socialprintstudio.com/">Social Print Studio</a>, <a href="https://www.guittard.com/">Guittard Chocolate Company</a> &nbsp;and <a href="http://alisonevents.com/">Alison Events</a></p>
+          <p><br /></p>
+          <p> To all our Donors:</p>
+          <div class="half">
+            <p><a href="https://www.lyft.com/">Lyft</a></p>
+            <p><a href="https://chwine.com/">Cameron Hughes Wine</a></p>
+            <p><a href="https://glampinghub.com/">Glamping Hub</a></p>
+            <p><a href="https://hobes.co/">The Hobe</a></p>
+            <p><a href="https://www.thisoldhudson.com/">This Old Hudson</a></p>
+            <p><a href="https://www.samudra11.com/">Samudra </a></p>
+            <p><a href="http://shopesqueleto.com/">Esqueleto Jewelry</a> <br /><a href="https://sarahowenstudio.com/">Sarah E Owen Studio</a></p>
+            <p><a href="https://www.etsy.com/shop/mickiandgloria">Micki +Gloria<br /></a><a href="https://shop-generalstore.com/">The General Store<br /></a><a href="https://www.coyuchi.com/">Coyuchi</a></p>
+            <p><a href="https://www.rei.com/">REI</a></p>
+            <p><a href="http://yogascapes.com/">Yogascapes</a></p>
+            <p><a href="http://www.shelter-co.com/">Shelter Co.</a></p>
+          </div>
+          <div class="half">
+            <p><a href="https://francesvalentine.com/shop/new-arrivals?gclid=CjwKCAiA9rjRBRAeEiwA2SV4ZUuvnJ5MX8srLlmYQiJhCsFFxSjCeTL_2bSDPApdQ_yirP7lSQJI6BoCC54QAvD_BwE">Frances Valentine</a> &nbsp;</p>
+            <p><a href="https://www.instagram.com/poepearls/">Po&eacute; Pearls</a></p>
+            <p><a href="https://www.yondershop.com/">Yonder</a></p>
+            <p><a href="http://bien.media/">Bien Media</a></p>
+            <p><a href="http://onebunk.com/">One Bunk</a></p>
+            <p><a href="https://camperahotel.com/">Campera Hotel Burbuja<br /></a><a href="https://velvet-tees.com/">Velvet Inc<br /></a><a href="http://www.missclarahotel.com/en/">Miss Clara hotel<br /></a><a href="https://www.carvedesigns.com/">Carve Designs<br /></a><a href="http://www.fujifilmusa.com/products/instax/">Fujifim Instax<br /></a><a href="https://visit.org/">Visit.org</a></p>
+            <p><a href="https://www.adelinejewelry.com/">Adeline Jewelry</a></p>
+            <p><a href="https://www.standardhotels.com/new-york/properties/high-line">The Standard Highline<br /></a><a href="https://www.handyright.com/">Handyright<br /><br /></a></p>
+          </div>
+          <p><br /></p>
+          <p><br /></p>
+          <p style="display:inline-block;"><br/>
+            And most importantly to &nbsp;all our donor photographers whose beautiful imagery you can see below:
+          </p>
         </div>
 
     </div>
 
     <h2>Featured Photos</h2>
 
-
     <div id="print-grid" class="grid-wrapper">
+      <div class="gram">
+          <a href="http://instagram.com/jeremykoreski" target="_blank">
+              <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/jeremykoreski-2.jpg"></div>
+              <p>jeremykoreski</p>
+          </a>
+      </div>
+
+      <div class="gram">
+          <a href="http://instagram.com/lowandtall" target="_blank">
+              <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/lowandtall_test-2.jpg"></div>
+              <p>lowandtall</p>
+          </a>
+      </div>
+
+      <div class="gram">
+          <a href="http://instagram.com/omjsk_" target="_blank">
+              <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/omjsk_lanikai-2.jpg"></div>
+              <p>omjsk_</p>
+          </a>
+      </div>
+
+      <div class="gram">
+          <a href="http://instagram.com/ernathan" target="_blank">
+              <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/ernathan_kailua-2.jpg"></div>
+              <p>ernathan</p>
+          </a>
+      </div>
+
+      <div class="gram">
+          <a href="http://instagram.com/dantom" target="_blank">
+              <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/dantom_wave-2.jpg"></div>
+              <p>dantom</p>
+          </a>
+      </div>
+
+      <div class="gram">
+          <a href="http://instagram.com/thayerandco" target="_blank">
+              <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/thayerandco_cuba-2.jpg"></div>
+              <p>thayerandco</p>
+          </a>
+      </div>
+
+
+
+
         <div class="gram">
             <a href="http://instagram.com/_klm____" target="_blank">
                 <div class="insta-square lazy" style="background-image:url('../img/placeholder.jpg');" data-src="images/picks/klm____.jpg"></div>
