--- a/new-site/events/climate/index.html
+++ b/new-site/events/climate/index.html
@@ -119,7 +119,7 @@
                 <p><a href="https://www.samudra11.com/">Samudra </a></p>
                 <p><a href="http://shopesqueleto.com/">Esqueleto Jewelry</a> <br /><a href="https://sarahowenstudio.com/">Sarah E Owen Studio</a></p>
                 <p><a href="https://www.etsy.com/shop/mickiandgloria">Micki +Gloria<br /></a><a href="https://shop-generalstore.com/">The General Store<br /></a><a href="https://www.coyuchi.com/">Coyuchi</a></p>
-                <p><a href="https://www.rei.com/">REI</a></p>
+                <p><a href="https://www.outessa.com/">REI&rsquo;s Outessa</a></p>
                 <p><a href="http://yogascapes.com/">Yogascapes</a></p>
                 <p><a href="http://www.shelter-co.com/">Shelter Co.</a></p>
             </div>
