--- a/new-site/events/climate/index.html
+++ b/new-site/events/climate/index.html
@@ -122,6 +122,7 @@
                 <p><a href="https://www.outessa.com/">REI&rsquo;s Outessa</a></p>
                 <p><a href="http://yogascapes.com/">Yogascapes</a></p>
                 <p><a href="http://www.shelter-co.com/">Shelter Co.</a></p>
+                <p>Amy Frost</p>
             </div>
             <div class="half">
                 <p><a href="https://francesvalentine.com/shop/new-arrivals?gclid=CjwKCAiA9rjRBRAeEiwA2SV4ZUuvnJ5MX8srLlmYQiJhCsFFxSjCeTL_2bSDPApdQ_yirP7lSQJI6BoCC54QAvD_BwE">Frances Valentine</a> &nbsp;</p>
