--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -107,10 +107,12 @@
         <span class="header-links"><a href="index.html" class="link-active">About</a></span>
         <span class="header-links list-triangle"><a href="../events/solas/index.html">Events</a>
           <ul>
+            <li><a href="../events/alohilani-giveaway/index.html">Alohilani</a></li>
+            <li><a href="../events/climate/index.html">Climate</a></li>
             <li><a href="../events/mytinyatlaslondon/index.html">London</a></li>
             <li><a href="../events/solas/index.html">SOLAS</a></li>
-           <li><a href="../events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
-           <li><a href="../events/montauk/index.html">Montauk Show</a></li>
+            <li><a href="../events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
+            <li><a href="../events/montauk/index.html">Montauk Show</a></li>
           </ul>
         </span>
         <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a>
