--- a/new-site/events/climate/index.html
+++ b/new-site/events/climate/index.html
@@ -60,9 +60,10 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
+                    <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="index.html" class="link-active">Climate</a></li>
-                     <li><a href="../mytinyatlaslondon/index.html">London</a></li>
-                     <li><a href="../solas/index.html">SOLAS</a></li>
+                    <li><a href="../mytinyatlaslondon/index.html">London</a></li>
+                    <li><a href="../solas/index.html">SOLAS</a></li>
                     <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
                     <li><a href="../montauk/index.html">Montauk Show</a></li>
                   </ul>
