--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -65,6 +65,8 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
+                    <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
+                    <li><a href="../climate/index.html">Climate</a></li>
                     <li><a href="../mytinyatlaslondon/index.html">London</a></li>
                     <li><a href="../solas/index.html">SOLAS</a></li>
                     <li><a href="index.html" class="link-active">Tiny Atlas Trips</a></li>
