--- a/new-site/events/alohilani-giveaway/index.html
+++ b/new-site/events/alohilani-giveaway/index.html
@@ -46,10 +46,10 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
-                    <li><a href="index.html" class="link-active">Alohilani Giveaway</a></li>
+                    <li><a href="index.html" class="link-active">Alohilani</a></li>
                     <li><a href="../climate/index.html">Climate</a></li>
-                     <li><a href="../mytinyatlaslondon/index.html">London</a></li>
-                     <li><a href="../solas/index.html">SOLAS</a></li>
+                    <li><a href="../mytinyatlaslondon/index.html">London</a></li>
+                    <li><a href="../solas/index.html">SOLAS</a></li>
                     <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
                     <li><a href="../montauk/index.html">Montauk Show</a></li>
                   </ul>
