--- a/new-site/events/montauk/index.html
+++ b/new-site/events/montauk/index.html
@@ -764,8 +764,10 @@ $(function() {
 
     <span class="header-links list-triangle"><a href="../index.html">Events</a>
           <ul>
-             <li><a href="../mytinyatlaslondon/index.html">London</a></li>
-             <li><a href="../solas/index.html">SOLAS</a></li>
+            <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
+            <li><a href="../climate/index.html">Climate</a></li>
+            <li><a href="../mytinyatlaslondon/index.html">London</a></li>
+            <li><a href="../solas/index.html">SOLAS</a></li>
             <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
             <li><a href="index.html" class="link-active">Montauk Show</a></li>
           </ul>
