--- a/new-site/events/mytinyatlaslondon/index.html
+++ b/new-site/events/mytinyatlaslondon/index.html
@@ -35,16 +35,7 @@
 
     </script>
 
-    <!-- <div class="header-container">
-			<div class="header-links-container">
 
-            <span class="header-links"><a href="about/index.html">Events</a></span>
-            <span class="header-links"><a href="about/index.html">About</a></span>
-			<span class="header-links"><a href="about/masthead.html">Masthead</a></span>
-            <span class="header-links"><a href="about/stockists.html">Stockists</a></span>
-            <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/products/pre-order-the-printed-annual" target="_blank">Shop</a></span>
-            </div>
-</div> -->
 
     <div class="header-container">
         <div class="header-logo">
@@ -63,8 +54,10 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
+                    <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
+                    <li><a href="../climate/index.html">Climate</a></li>
                     <li><a href="index.html" class="link-active">London</a></li>
-                     <li><a href="../solas/index.html">SOLAS</a></li>
+                    <li><a href="../solas/index.html">SOLAS</a></li>
                     <li><a href="../tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
                     <li><a href="../montauk/index.html">Montauk Show</a></li>
                   </ul>
