New Events Page

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -89,7 +89,7 @@
 
              <span class="header-links"><a href="about/index.html">About</a></span>
 
-            <span class="header-links list-triangle"><a href="events/solas/index.html">Events</a>
+            <span class="header-links list-triangle"><a href="events/climate/index.html">Events</a>
                   <ul>
                     <li><a href="events/alohilani-giveaway/index.html">Alohilani Giveaway</a></li>
                     <li><a href="events/climate/index.html">Climate</a></li>
