--- a/new-site/index.html
+++ b/new-site/index.html
@@ -89,9 +89,9 @@
 
              <span class="header-links"><a href="about/index.html">About</a></span>
 
-            <span class="header-links list-triangle"><a href="events/climate/index.html">Events</a>
+            <span class="header-links list-triangle"><a href="events/index.html">Events</a>
                   <ul>
-                    <li><a href="events/alohilani-giveaway/index.html">Alohilani Giveaway</a></li>
+                    <li><a href="events/alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="events/climate/index.html">Climate</a></li>
                     <li><a href="events/mytinyatlaslondon/index.html">London</a></li>
                     <li><a href="events/solas/index.html">SOLAS</a></li>
