--- a/new-site/events/index.html
+++ b/new-site/events/index.html
@@ -44,9 +44,9 @@
 
             <span class="header-links"><a href="../about/index.html">About</a></span>
 
-            <span class="header-links list-triangle"><a href="index.html">Events</a>
+            <span class="header-links list-triangle link-active"><a href="index.html">Events</a>
                   <ul>
-                    <li><a href="alohilani-giveaway/index.html" class="link-active">Alohilani</a></li>
+                    <li><a href="alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="climate/index.html">Climate</a></li>
                     <li><a href="mytinyatlaslondon/index.html">London</a></li>
                     <li><a href="solas/index.html">SOLAS</a></li>
@@ -113,7 +113,7 @@
               </p>
               <p>The islands, deep in the Pacific, offer tropical landscapes, a reef accessible in minutes, world class surf and surf photography, turquoise lagoons brimming with marine life, and the warmest Tahitian hospitality.</p>
 
-                <p><a class="e-link" href="/tahiti-tofino/index.html#tahiti">View Trip</a></p>
+                <p><a class="e-link" href="tahiti-tofino/index.html#tahiti">View Trip</a></p>
             </div>
         </div>
     </div>
