--- a/new-site/events/index.html
+++ b/new-site/events/index.html
@@ -44,7 +44,7 @@
 
             <span class="header-links"><a href="../about/index.html">About</a></span>
 
-            <span class="header-links list-triangle link-active"><a href="index.html">Events</a>
+            <span class="header-links list-triangle"><a href="index.html" class="link-active">Events</a>
                   <ul>
                     <li><a href="alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="climate/index.html">Climate</a></li>
