--- a/new-site/about/stockists.html
+++ b/new-site/about/stockists.html
@@ -105,7 +105,7 @@
           </ul>
         </span>
         <span class="header-links"><a href="index.html">About</a></span>
-        <span class="header-links list-triangle"><a href="../events/solas/index.html">Events</a>
+        <span class="header-links list-triangle"><a href="../events/index.html">Events</a>
           <ul>
             <li><a href="../events/alohilani-giveaway/index.html">Alohilani</a></li>
             <li><a href="../events/climate/index.html">Climate</a></li>
