--- a/new-site/events/index.html
+++ b/new-site/events/index.html
@@ -46,6 +46,7 @@
 
             <span class="header-links list-triangle"><a href="index.html" class="link-active">Events</a>
                   <ul>
+                    <li><a href="mendocino/index.html">Mendocino</a></li>
                     <li><a href="alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="climate/index.html">Climate</a></li>
                     <li><a href="mytinyatlaslondon/index.html">London</a></li>
@@ -56,6 +57,21 @@
                 </span>
 
             <span class="header-links"><a href="https://alitedesigns.com/collections/californiamade" target="_blank">Shop</a></span>
+        </div>
+    </div>
+
+    <div class="event-bg" style="background-image: url(mendocino/images/bg.jpg)">
+        <div class="details-card event-card">
+            <h3>Tiny Atlas Quarterly Mendocino</h3>
+            <div class="main-content">
+              <p class="info">
+                  <span class="label">When</span><br /> May 17, 2018
+              </p>
+
+                <p>Join Tiny Atlas&rsquo; creative community for a weekend retreat in Mendocino, California. Stay at modern, fully-furnished tents in the middle of a forest of coastal pines and Douglas firs overlooking the Pacific. All meals will be prepared with heart and creativity by the <a href="https://www.facebook.com/cateringcousins/">Catering Cousins</a>, including some freshly foraged ingredients and California grown produce. Surrounded by lush canyons and crisp ocean air, we invite you to delve into your photography and writing skills and create alongside others in the Tiny Atlas community.
+                </p>
+                <p><a class="e-link" href="mendocino/index.html">View Trip</a></p>
+            </div>
         </div>
     </div>
 
@@ -72,7 +88,7 @@
                 <p><a class="e-link" href="alohilani-giveaway/index.html">View Giveaway</a></p>
             </div>
         </div>
-    </div>
+
     <div class="event-bg" style="background-image: url(climate/images/hero/BessFriday_GuilinChina.jpg)">
         <div class="details-card event-card">
             <h3>#mytinyatlasCLIMATE</h3>
