--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -107,6 +107,7 @@
         <span class="header-links"><a href="index.html" class="link-active">About</a></span>
         <span class="header-links list-triangle"><a href="../events/index.html">Events</a>
           <ul>
+            <li><a href="../events/mendocino/index.html">Mendocino</a></li>
             <li><a href="../events/alohilani-giveaway/index.html">Alohilani</a></li>
             <li><a href="../events/climate/index.html">Climate</a></li>
             <li><a href="../events/mytinyatlaslondon/index.html">London</a></li>
