--- a/new-site/events/alohilani-giveaway/index.html
+++ b/new-site/events/alohilani-giveaway/index.html
@@ -46,6 +46,7 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
+                    <li><a href="../mendocino/index.html">Mendocino</a></li>
                     <li><a href="index.html" class="link-active">Alohilani</a></li>
                     <li><a href="../climate/index.html">Climate</a></li>
                     <li><a href="../mytinyatlaslondon/index.html">London</a></li>
