--- a/new-site/events/climate/index.html
+++ b/new-site/events/climate/index.html
@@ -60,6 +60,7 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
+                    <li><a href="../mendocino/index.html">Mendocino</a></li>
                     <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="index.html" class="link-active">Climate</a></li>
                     <li><a href="../mytinyatlaslondon/index.html">London</a></li>
