--- a/new-site/events/montauk/index.html
+++ b/new-site/events/montauk/index.html
@@ -764,6 +764,7 @@ $(function() {
 
     <span class="header-links list-triangle"><a href="../index.html">Events</a>
           <ul>
+            <li><a href="../mendocino/index.html">Mendocino</a></li>
             <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
             <li><a href="../climate/index.html">Climate</a></li>
             <li><a href="../mytinyatlaslondon/index.html">London</a></li>
