--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -65,6 +65,7 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
+                    <li><a href="../mendocino/index.html">Mendocino</a></li>
                     <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="../climate/index.html">Climate</a></li>
                     <li><a href="../mytinyatlaslondon/index.html">London</a></li>
